doc del endpoint agregar producto a carrito
