# src/docs/apiDocs.yaml
@@ -1588,6 +1588,208 @@ paths:
                   method:
                     type: string
                     example: "POST"
+  /api/carts/{cartId}/product/{productId}:
+    post:
+      tags:
+      - Cart
+      summary: Agregar un producto al carrito.
+      description: Este endpoint permite agregar un producto a un carrito de compras específico. Para hacerlo, es necesario enviar un ID válido del carrito y del producto. Solo los usuarios con roles de Usuario o Premium están autorizados para utilizar este recurso, lo que les permite añadir productos a su carrito y proceder con la compra. Los usuarios con rol Admin no tienen acceso a este endpoint.
+      security:
+      - sessionAuth: []
+      parameters:
+      - name: cartId
+        in: path
+        required: true
+        description: EL ID del carrito
+        schema:
+          type: string
+          example: 64b4d6f55c4eaf0012e4b765
+      - name:  productId
+        in: path
+        required: true
+        description: El ID del producto
+        schema:
+          type: string
+          example: 64b4d6f55c4eaf0012e4b765
+      responses:
+        '201':
+          description: Producto agregado a carrito
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "Producto agregado a carrito"
+                  data:
+                    $ref: '#/components/schemas/Cart'
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "2024-08-22T11:41:34.077Z"
+                  path:
+                    type: string
+                    example: "/api/carts/66b831c5da16170698d64bd7/product/6655f2e1838f6059080ed4f8"
+                  method:
+                    type: string
+                    example: "POST"
+        '400':
+          description: El ID no contiene un formato válido de MongoDB
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "El ID no contiene un formato válido de MongoDB"
+                  data:
+                    type: object
+                    properties:
+                      errorDescription:
+                        type: object
+                        properties:
+                          message:
+                            type: string
+                            example: "Invalid ID: '66b831c5da16170698dbd7' in the 'cartId' field."
+                          method:
+                            type: string
+                            example: "POST"
+                          path:
+                            type: string
+                            example: "/api/carts/66b831c5da16170698dbd7/product/64b4d6f55c4eaf0012e4b765"
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "2024-08-22T11:37:02.492Z"
+                  path:
+                    type: string
+                    example: "/api/carts/66b831c5da16170698dbd7/product/64b4d6f55c4eaf0012e4b765"
+                  method:
+                    type: string
+                    example: "POST"
+        '404':
+          description: No se encontró el recurso solicitado
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "No se encontró el recurso solicitado"
+                  data:
+                    type: object
+                    properties:
+                      errorDescription:
+                        type: object
+                        properties:
+                          message:
+                            type: string
+                            example: "No se encontró el recurso con ID 64b4d6f55c4eaf0012e4b765"
+                          method:
+                            type: string
+                            example: "POST"
+                          path:
+                            type: string
+                            example: "/api/resource/64b4d6f55c4eaf0012e4b765/related/64b4d6f55c4eaf0012e4b765"
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "2024-08-22T11:31:35.535Z"
+                  path:
+                    type: string
+                    example: "/api/resource/64b4d6f55c4eaf0012e4b765/related/64b4d6f55c4eaf0012e4b765"
+                  method:
+                    type: string
+                    example: "POST"
+        '409':
+          description: El recurso ya existe
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "El recurso ya existe"
+                  data:
+                    type: object
+                    properties:
+                      errorDescription:
+                        type: object
+                        properties:
+                          message:
+                            type: string
+                            example: "El producto con ID 664e9a37763144e6f5951fa5 ya existe en el carrito"
+                          method:
+                            type: string
+                            example: "POST"
+                          path:
+                            type: string
+                            example: "/api/carts/66b831c5da16170698d64bd7/product/664e9a37763144e6f5951fa5"
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "2024-08-22T12:03:32.035Z"
+                  path:
+                    type: string
+                    example: "/api/carts/66b831c5da16170698d64bd7/product/664e9a37763144e6f5951fa5"
+                  method:
+                    type: string
+                    example: "POST"
+        '500':
+          description: Error en el servidor
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Error en el servidor"
+                  data:
+                    type: object
+                    properties:
+                      errorDescription:
+                        type: object
+                        properties:
+                          message:
+                            type: string
+                            example: "Unexpected error while processing the request"
+                          method:
+                            type: string
+                            example: "POST"
+                          path:
+                            type: string
+                            example: "/api/carts/66b831c5da16170698d64bd7/product/664e9a37763144e6f5951fa5"
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "2024-08-22T12:05:45.120Z"
+                  path:
+                    type: string
+                    example: "/api/carts/66b831c5da16170698d64bd7/product/664e9a37763144e6f5951fa5"
+                  method:
+                    type: string
+                    example: "POST"
+
 components:
   schemas:
     Product:
@@ -1693,3 +1895,25 @@ components:
           type: string
           format: date-time
           example: "2024-08-21T14:02:34.834Z"
+    Cart:
+      type: object
+      properties:
+        _id:
+          type: string
+          example: "66b831c5da16170698d64bd7"
+        _user_id:
+          type: string
+          example: "66b831c5da16170698d64bd5"
+        products:
+          type: array
+          items:
+            type: object
+            properties:
+              _id:
+                type: string
+                example: "6655f2e1838f6059080ed4f8"
+              quantity:
+                type: integer
+                example: 1
+                                                 
+  
